--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-hw-07-phonebook",
+  "name": "react-07-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yuriileo.github.io/goit-react-hw-07-phonebook/",
+  "homepage": "https://yuriileo.github.io/react-07-phonebook/",
   "dependencies": {
     "@redux-devtools/extension": "^3.2.3",
     "@reduxjs/toolkit": "^1.8.6",
